@@ -65,6 +65,8 @@
 	    value="http://java.sun.com/javase/6/docs/api/"/>
   <property name="javadoc.link.jackson"
 	    value="http://jackson.codehaus.org/0.9.3/javadoc/"/>
+  <property name="javadoc.link.servlet"
+	    value="http://java.sun.com/products/servlet/2.3/javadoc/"/>
   <property name="javadoc.packages" value="org.${org}.${name}.*"/>
 
   <property name="javac.encoding" value="ISO-8859-1"/>
@@ -470,6 +472,7 @@
 	
         <link href="${javadoc.link.java}"/>
         <link href="${javadoc.link.jackson}"/>
+        <link href="${javadoc.link.servlet}"/>
 
         <classpath >
           <path refid="java.classpath" />
