@@ -36,6 +36,8 @@ public class HttpTransceiver extends Transceiver {
   private static final Logger LOG
     = LoggerFactory.getLogger(HttpTransceiver.class);
 
+  static final String CONTENT_TYPE = "avro/binary"; 
+
   private URL url;
   private URLConnection connection;
   
@@ -47,7 +49,7 @@ public class HttpTransceiver extends Transceiver {
   public synchronized List<ByteBuffer> transceive(List<ByteBuffer> request)
     throws IOException {
     this.connection = url.openConnection();
-    connection.setRequestProperty("Content-Type", "avro/binary");
+    connection.setRequestProperty("Content-Type", CONTENT_TYPE);
     connection.setRequestProperty("Content-Length",
                                   Integer.toString(getLength(request)));
     connection.setDoOutput(true);
